--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -3,10 +3,10 @@
 }
 
 .marker {
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
+  width: 20px;
+  height: 20px;
   background: red;
   position: absolute;
-  transform: translate(-5px, -5px);
+  transform: translate(-10px, -10px);
+  border-radius: 50%;
 }
