--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,12 +1,15 @@
 .map {
-  position: relative;
+    position: relative;
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
 }
 
 .marker {
-  width: 20px;
-  height: 20px;
-  background: red;
-  position: absolute;
-  transform: translate(-10px, -10px);
-  border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: red;
+    position: absolute;
+    transform: translate(-10px, -10px);
+    border-radius: 50%;
 }
