--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,6 +1,11 @@
 .map {
     position: relative;
+    margin: auto;
     width: 500px;
     height: 500px;
     border: 1px solid black;
+}
+
+svg {
+  background-color: black;
 }
