--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,2 +1,12 @@
-.App {
+
+.app {
+  width: 60rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+
 }
