--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400&subset=cyrillic');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Oswald', sans-serif;
+  background-color: #fff;
+
+}
+
+body ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
